--- a/app/src/main/res/layout/map_dialog.xml
+++ b/app/src/main/res/layout/map_dialog.xml
@@ -8,12 +8,10 @@
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:visibility="gone" />
 
-    <fragment
-        android:id="@+id/mapDialogFragment"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
+        android:id="@+id/mapContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/closeButton" />
