--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -111,7 +111,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Add"
-                android:textColor="?attr/colorPrimary"
+                android:textColor="@android:color/white"
+                android:backgroundTint="?attr/colorPrimary"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
             <Button
@@ -121,7 +122,8 @@
                 android:layout_weight="1"
                 android:layout_marginStart="8dp"
                 android:text="Update"
-                android:textColor="?attr/colorPrimary"
+                android:textColor="@android:color/white"
+                android:backgroundTint="?attr/colorPrimary"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
             <Button
@@ -131,41 +133,55 @@
                 android:layout_weight="1"
                 android:layout_marginStart="8dp"
                 android:text="Delete"
-                android:textColor="?attr/colorPrimary"
+                android:textColor="@android:color/white"
+                android:backgroundTint="?attr/colorPrimary"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/mapButton"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="Show on Map"
-            android:backgroundTint="?attr/colorPrimary"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/buttonLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/clearButton" />
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/buttonLayout">
 
-        <Button
-            android:id="@+id/clearButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Clear Fields"
-            android:backgroundTint="?attr/colorPrimary"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/buttonLayout"
-            app:layout_constraintStart_toEndOf="@id/mapButton"
-            app:layout_constraintEnd_toEndOf="parent" />
+            <Button
+                android:id="@+id/mapButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Show on Map"
+                android:backgroundTint="?attr/colorPrimary"
+                android:textColor="@android:color/white" />
 
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/mapButton"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
-
+            <Button
+                android:id="@+id/clearButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Clear Fields"
+                android:backgroundTint="?attr/colorPrimary"
+                android:textColor="@android:color/white"
+                android:layout_marginStart="8dp" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Registered Students"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:paddingBottom="8dp" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"
+        android:padding="8dp"
+        android:background="@android:color/white"
+        android:scrollbars="vertical" />
+</LinearLayout>
